updates and metar fix